<resources>
    <string name="app_name">Coze</string>
    <string name="network_is_not_available">网络不可用</string>
    <string name="is_landing">正在登录...</string>
    <string name="login_failed">登录失败</string>
    <string name="is_registering">正在注册...</string>
    <string name="registered_successfully">注册成功</string>
    <string name="network_anomalies">网络异常，请检查网络</string>
    <string name="user_already_exists">用户已存在</string>
    <string name="registration_failed_without_permission">注册失败，无权限</string>
    <string name="illegal_user_name">用户名只能是小写字母或数字</string>
    <string name="registration_failed">注册失败</string>
    <string name="group">(群)</string>
    <string name="user_removed">账号已经被移除</string>
    <string name="user_login_another_device">账号在其它设备登录</string>
    <string name="can_not_connect">连接不到服务器</string>
    <string name="change_user">切换用户</string>
    <string name="try_again">请重试</string>
    <string name="context_menu">菜单</string>
    <string name="add_friend">添加好友</string>
    <string name="add_group">加入群组</string>
    <string name="create_group">创建群组</string>
    <string name="notification">查看通知</string>
    <string name="userName">用户名:</string>
    <string name="nickname">昵称:</string>
    <string name="change_avatar">更换头像</string>
    <string name="change_nickname">修改昵称</string>
    <string name="send_msg">发送消息</string>
    <string name="group_num">群组号码：</string>
    <string name="group_name">群组名称：</string>
    <string name="group_members">群组成员：</string>
    <string name="owner">群主</string>
    <string name="input_name">输入对方的用户名</string>
    <string name="input_reason">输入添加理由</string>
    <string name="send_request">发出申请</string>
    <string name="Is_sending_a_request">正在发送请求...</string>
    <string name="send_successful">请求发送成功，等待对方验证</string>
    <string name="Request_add_buddy_failure">请求添加好友失败：</string>
    <string name="searching">正在查找...</string>
    <string name="group_not_existed">群组不存在</string>
    <string name="group_search_failed">查找失败</string>
    <string name="connect_failuer_toast">请检查网络或稍后再试</string>
    <string name="message">消息通知</string>
    <string name="agree">已同意</string>
    <string name="refuse">已拒绝</string>
    <string name="change_group_name">修改群组名称</string>
    <string name="delete_friend">删除好友</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="up_to_cancel">手指上滑，取消发送</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="Is_download_voice_click_later">正在下载语音，稍后点击</string>
    <string name="quit_group">退出群组</string>
    <string name="delete_from_group">从群组删除</string>


</resources>
