<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menu_group_1">
        <item
            android:id="@+id/drawer_add_friend"
            android:icon="@drawable/person_add"
            android:title="@string/add_friend" />
        <item
            android:id="@+id/drawer_add_group"
            android:icon="@drawable/group_add"
            android:title="@string/add_group"/>
        <item
            android:id="@+id/drawer_create_group"
            android:icon="@drawable/group"
            android:title="@string/create_group"/>
        <item
            android:id="@+id/drawer_notification"
            android:icon="@drawable/notifications"
            android:title="@string/notification"/>
        <item
            android:id="@+id/drawer_change"
            android:icon="@drawable/change"
            android:title="@string/change_user"/>
    </group>

</menu>