<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/chat_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/chat_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:theme="@style/AppTheme.AppBarOverlay"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/add_friend_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            >
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/chat_bar"
        android:background="#f0f0f0"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_margin="20dp"
            android:background="#fff"
            android:hint="@string/input_name"
            android:paddingLeft="10dp"/>

        <EditText
            android:id="@+id/et_reason"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_margin="20dp"
            android:background="#fff"
            android:hint="@string/input_reason"
            android:paddingLeft="10dp"/>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_margin="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/send_request"
            android:textColor="#fff"
            android:textSize="16sp"/>

    </LinearLayout>


</RelativeLayout>